--- a/apps/design-system/src/Getting Started.stories.mdx
+++ b/apps/design-system/src/Getting Started.stories.mdx
@@ -9,7 +9,7 @@ import { Meta } from '@storybook/blocks'
 
 ## Welcome
 
-Welcome to Atom, the [Studio](https://studio.asyncapi.com) design system. Here you'll find useful information about how to design UI components for Studio as well as a bunch of ready-made components.
+Welcome to Atoms, the [Studio](https://studio.asyncapi.com) design system. Here you'll find useful information about how to design UI components for Studio as well as a bunch of ready-made components.
 
 ## Philosophy
 
