Add Kafka and WebSocket icons

--- a/apps/design-system/src/design-tokens/Icons.stories.mdx
+++ b/apps/design-system/src/design-tokens/Icons.stories.mdx
@@ -7,6 +7,7 @@ import {
   DocumentTextIcon,
   EllipsisVerticalIcon,
   EyeIcon,
+  KafkaIcon,
   ListBulletIcon,
   MagnifyingGlassIcon,
   MapIcon,
@@ -19,6 +20,7 @@ import {
   SquaresPlusIcon,
   TrashIcon,
   UsersIcon,
+  WebSocketIcon,
   XMarkIcon,
 } from 'ui/icons'
 
@@ -41,6 +43,7 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
       DocumentTextIcon,
       EllipsisVerticalIcon,
       EyeIcon,
+      KafkaIcon,
       ListBulletIcon,
       MagnifyingGlassIcon,
       MapIcon,
@@ -53,6 +56,7 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
       SquaresPlusIcon,
       TrashIcon,
       UsersIcon,
+      WebSocketIcon,
       XMarkIcon,
     ].map((Icon) => (
       <IconItem name={Icon.displayName || Icon.render.name}>
