Add Google PubSub badge

--- a/apps/design-system/src/design-tokens/Icons.stories.mdx
+++ b/apps/design-system/src/design-tokens/Icons.stories.mdx
@@ -1,5 +1,6 @@
 import { Meta, IconGallery, IconItem } from '@storybook/blocks'
 import {
+  AMQPIcon,
   AdjustmentsHorizontalIcon,
   ArrowsRightLeftIcon,
   ChevronLeftIcon,
@@ -7,10 +8,12 @@ import {
   DocumentTextIcon,
   EllipsisVerticalIcon,
   EyeIcon,
+  GooglePubSubIcon,
   KafkaIcon,
   ListBulletIcon,
   MagnifyingGlassIcon,
   MapIcon,
+  MQTTIcon,
   PlusIcon,
   PlusCircleIcon,
   QuestionMarkCircleIcon,
@@ -36,6 +39,7 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
 <IconGallery>
   {
     [
+      AMQPIcon,
       AdjustmentsHorizontalIcon,
       ArrowsRightLeftIcon,
       ChevronLeftIcon,
@@ -43,10 +47,12 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
       DocumentTextIcon,
       EllipsisVerticalIcon,
       EyeIcon,
+      GooglePubSubIcon,
       KafkaIcon,
       ListBulletIcon,
       MagnifyingGlassIcon,
       MapIcon,
+      MQTTIcon,
       PlusIcon,
       PlusCircleIcon,
       QuestionMarkCircleIcon,
