Add IBM MQ badge

--- a/apps/design-system/src/design-tokens/Icons.stories.mdx
+++ b/apps/design-system/src/design-tokens/Icons.stories.mdx
@@ -9,6 +9,7 @@ import {
   EllipsisVerticalIcon,
   EyeIcon,
   GooglePubSubIcon,
+  IBMMQIcon,
   KafkaIcon,
   ListBulletIcon,
   MagnifyingGlassIcon,
@@ -48,6 +49,7 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
       EllipsisVerticalIcon,
       EyeIcon,
       GooglePubSubIcon,
+      IBMMQIcon,
       KafkaIcon,
       ListBulletIcon,
       MagnifyingGlassIcon,
