--- a/apps/design-system/src/design-tokens/Icons.stories.mdx
+++ b/apps/design-system/src/design-tokens/Icons.stories.mdx
@@ -15,6 +15,7 @@ import {
   MagnifyingGlassIcon,
   MapIcon,
   MQTTIcon,
+  NATSIcon,
   PlusIcon,
   PlusCircleIcon,
   QuestionMarkCircleIcon,
@@ -55,6 +56,7 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
       MagnifyingGlassIcon,
       MapIcon,
       MQTTIcon,
+      NATSIcon,
       PlusIcon,
       PlusCircleIcon,
       QuestionMarkCircleIcon,
