Add Pulsar badge

--- a/apps/design-system/src/design-tokens/Icons.stories.mdx
+++ b/apps/design-system/src/design-tokens/Icons.stories.mdx
@@ -18,6 +18,7 @@ import {
   NATSIcon,
   PlusIcon,
   PlusCircleIcon,
+  PulsarIcon,
   QuestionMarkCircleIcon,
   ScaleIcon,
   SealIcon,
@@ -59,6 +60,7 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
       NATSIcon,
       PlusIcon,
       PlusCircleIcon,
+      PulsarIcon,
       QuestionMarkCircleIcon,
       ScaleIcon,
       SealIcon,
