--- a/apps/design-system/src/design-tokens/Icons.stories.mdx
+++ b/apps/design-system/src/design-tokens/Icons.stories.mdx
@@ -20,6 +20,7 @@ import {
   PlusCircleIcon,
   PulsarIcon,
   QuestionMarkCircleIcon,
+  RedisIcon,
   ScaleIcon,
   SealIcon,
   ServerStackIcon,
@@ -62,6 +63,7 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
       PlusCircleIcon,
       PulsarIcon,
       QuestionMarkCircleIcon,
+      RedisIcon,
       ScaleIcon,
       SealIcon,
       ServerStackIcon,
