Add SNS and SQS badges

--- a/apps/design-system/src/design-tokens/Icons.stories.mdx
+++ b/apps/design-system/src/design-tokens/Icons.stories.mdx
@@ -1,6 +1,8 @@
 import { Meta, IconGallery, IconItem } from '@storybook/blocks'
 import {
   AMQPIcon,
+  AWSSNSIcon,
+  AWSSQSIcon,
   AdjustmentsHorizontalIcon,
   ArrowsRightLeftIcon,
   ChevronLeftIcon,
@@ -44,6 +46,8 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
   {
     [
       AMQPIcon,
+      AWSSNSIcon,
+      AWSSQSIcon,
       AdjustmentsHorizontalIcon,
       ArrowsRightLeftIcon,
       ChevronLeftIcon,
