--- a/apps/design-system/src/design-tokens/Icons.stories.mdx
+++ b/apps/design-system/src/design-tokens/Icons.stories.mdx
@@ -26,7 +26,9 @@ import {
   ScaleIcon,
   SealIcon,
   ServerStackIcon,
+  SolaceIcon,
   SquaresPlusIcon,
+  StompIcon,
   TrashIcon,
   UsersIcon,
   WebSocketIcon,
@@ -71,7 +73,9 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
       ScaleIcon,
       SealIcon,
       ServerStackIcon,
+      SolaceIcon,
       SquaresPlusIcon,
+      StompIcon,
       TrashIcon,
       UsersIcon,
       WebSocketIcon,
