--- a/apps/design-system/src/design-tokens/Icons.stories.mdx
+++ b/apps/design-system/src/design-tokens/Icons.stories.mdx
@@ -1,5 +1,8 @@
 import { Meta, IconGallery, IconItem } from '@storybook/blocks'
 import {
+  AMQPIcon,
+  AWSSNSIcon,
+  AWSSQSIcon,
   AdjustmentsHorizontalIcon,
   ArrowsRightLeftIcon,
   ChevronLeftIcon,
@@ -7,18 +10,28 @@ import {
   DocumentTextIcon,
   EllipsisVerticalIcon,
   EyeIcon,
+  GooglePubSubIcon,
+  IBMMQIcon,
+  KafkaIcon,
   ListBulletIcon,
   MagnifyingGlassIcon,
   MapIcon,
+  MQTTIcon,
+  NATSIcon,
   PlusIcon,
   PlusCircleIcon,
+  PulsarIcon,
   QuestionMarkCircleIcon,
+  RedisIcon,
   ScaleIcon,
   SealIcon,
   ServerStackIcon,
+  SolaceIcon,
   SquaresPlusIcon,
+  StompIcon,
   TrashIcon,
   UsersIcon,
+  WebSocketIcon,
   XMarkIcon,
 } from 'ui/icons'
 
@@ -34,6 +47,9 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
 <IconGallery>
   {
     [
+      AMQPIcon,
+      AWSSNSIcon,
+      AWSSQSIcon,
       AdjustmentsHorizontalIcon,
       ArrowsRightLeftIcon,
       ChevronLeftIcon,
@@ -41,18 +57,28 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
       DocumentTextIcon,
       EllipsisVerticalIcon,
       EyeIcon,
+      GooglePubSubIcon,
+      IBMMQIcon,
+      KafkaIcon,
       ListBulletIcon,
       MagnifyingGlassIcon,
       MapIcon,
+      MQTTIcon,
+      NATSIcon,
       PlusIcon,
       PlusCircleIcon,
+      PulsarIcon,
       QuestionMarkCircleIcon,
+      RedisIcon,
       ScaleIcon,
       SealIcon,
       ServerStackIcon,
+      SolaceIcon,
       SquaresPlusIcon,
+      StompIcon,
       TrashIcon,
       UsersIcon,
+      WebSocketIcon,
       XMarkIcon,
     ].map((Icon) => (
       <IconItem name={Icon.displayName || Icon.render.name}>
