use correct package name

--- a/apps/design-system/src/design-tokens/Icons.stories.mdx
+++ b/apps/design-system/src/design-tokens/Icons.stories.mdx
@@ -33,7 +33,7 @@ import {
   UsersIcon,
   WebSocketIcon,
   XMarkIcon,
-} from 'ui/icons'
+} from '@asyncapi/studio-ui/icons'
 
 <Meta 
     title="Design Tokens/Icons"
@@ -91,7 +91,7 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
 ### Example
 
 ```jsx
-import { MapIcon } from 'ui/icons'
+import { MapIcon } from '@asyncapi/studio-ui/icons'
 
 ...
 
