add IconButton stories

--- a/apps/design-system/src/design-tokens/Icons.stories.mdx
+++ b/apps/design-system/src/design-tokens/Icons.stories.mdx
@@ -33,6 +33,7 @@ import {
   UsersIcon,
   WebSocketIcon,
   XMarkIcon,
+  AddIcon,
 } from '@asyncapi/studio-ui/icons'
 
 <Meta 
@@ -80,6 +81,7 @@ Most of the icons below are taken from https://heroicons.com. If you need to add
       UsersIcon,
       WebSocketIcon,
       XMarkIcon,
+      AddIcon,
     ].map((Icon) => (
       <IconItem name={Icon.displayName || Icon.render.name}>
         <Icon />
